first commit- added basic structure

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,26 +2,6 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
+@import url('https://better.com/amplify-poc/_next/static/css/06556c4f804673da.css');
+@import url('https://better.com/amplify-poc/_next/static/css/eb57c3d52384af40.css');
+/* @import url('https://better.com/amplify-poc/_next/static/css/eb57c3d52384af40.css'); */
